--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="abs">
 			<h1>Nicoles Blog</h1>
 			<p>Reisen in Andalusien</p>
-      <p>Von Alicante bis Zafarraya<a href="http://theleech.tk">Katzenseite</a> angucken.</p>
+      <p>Von Almunecar bis Zafarraya<a href="http://theleech.tk">Katzenseite</a> angucken.</p>
 		</div>
     </body>
 </html>
